--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -26,7 +26,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r src/requirements.txt; fi
+        pip install -r src/requirements.txt
     - name: Lint with flake8, isort and black
       run: |
-        black . --check && isort . --check && flake8
+        black . --check
+        isort . --check
+        flake8
