--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ alembic = "^1.10.3"
 psycopg2-binary = "^2.9.6"
 httpx = "^0.24.0"
 aiohttp = "^3.8.4"
+redis-om = "^0.1.2"
 
 [tool.poetry.group.dev.dependencies]
 isort = "5.10.1"
